# laplax

./: .gitignore  .pre-commit-config.yaml  404.html  FSP_USAGE.md  README.md  icml_regression.sh  index.html  makefile  mkdocs.yml  myplot  objects.inv  prob_predictive.pkl  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yaml  docs.yaml  lint.yaml  test.yaml
api/: index.html
background/: index.html
css/: custom.css
design_philosophy/: index.html
docs/: api.md  background.md  design_philosophy.md  gen_api.py  index.md  references.bib
docs/api/: curv.md  eval.md  eval.metrics.md  eval.pushforward.md  util.md  util.mv.md  util.ops.md
examples/: 0000_tiny_laplax.ipynb  0001.py  0001_laplax_for_regression.ipynb  0001_my_old_version.ipynb  0001_posterior_gp_kernel.ipynb  0002_laplax_on_mnist.ipynb  0003.ipynb  0004_fsp.py  0004_fsp_integration.py  0004_fsp_laplax.ipynb  0004_function_space_laplace.ipynb  README.md  README_two_moons.md  ex_classification.py  ex_helper.py  ex_regression.py  example.py  fsp.py  fsp_sin_regression.py  fsp_two_moons_classification.ipynb  fsp_two_moons_classification.py  helper.py  helper_my_version.py  m52.pkl  marginal_likelihood_example.py  optimize.ipynb  plot.ipynb  plotting.py  prior.py  prior_class.py  rbf.pkl  regression.py  two_moons_fsp_classification.py
fsp/: README.md  sin.yaml
laplax/: __init__.py  api.py  enums.py  laplace.py  register.py  types.py
laplax/extra/FSPLaplace/data_utils/bayes_opt_utils/gym_interf/envs/cpp/: CMakeLists.txt
search/: search_index.json
tests/: test_laplace_regression.py
(+409 files in other folders)
